force-app/main/default/objects/Contact/fields/Number_of_dismentled_cars__c.field-meta.xml
<CustomField>
    <fullName>Number_of_dismentled_cars__c</fullName>
    <label>Number of dismentled cars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>