force-app/main/default/objects/Contact/fields/Total_of_Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Monthly_Salary__c</fullName>
    <description>If the master dismantles 30 or more cars in a month, then master gets +350$ bonus each month.</description>
    <formula>IF(Monthly_Number_of_dismentled_cars__c &gt;= 30, Monthly_Salary__c + 350, Monthly_Salary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total of Monthly Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>