force-app/main/default/objects/Contact/fields/Weekly_salary__c.field-meta.xml
<CustomField>
    <fullName>Weekly_salary__c</fullName>
    <formula>IF( Number_of_dismentled_cars__c  &gt;= 7,
    1400 + ((Number_of_dismentled_cars__c-7) * 200),
    1400 - ((7 - Number_of_dismentled_cars__c) * 200)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>